footer fixed position for overflowing table

--- a/pivotal-cards.css
+++ b/pivotal-cards.css
@@ -6,7 +6,7 @@
 	font-size: 3.5mm;
 	padding: 10mm;
 	display: block;
-	margin: 7.5mm;
+	margin: 5mm;
 	padding: 0;
 	border: 1px dotted #eee;
 	width: 283mm;
@@ -35,6 +35,7 @@
 	border: 1mm solid #333;
 	overflow: hidden;
 	color: #333;
+	position: relative;
 }
 
 
@@ -52,6 +53,7 @@
 
 .middle {
 	height: 53mm;
+	max-height: 53mm;
 	width: 115mm;
 	overflow: hidden;
 	display: table;
@@ -60,6 +62,7 @@
 
 .back .middle {
 	height: 48mm;
+	max-height: 48mm;
 }
 
 .front .story-type {
@@ -115,6 +118,9 @@
 .footer {
 	color: #333;
 	height: 7.5mm;
+	width: 115mm;
+	position: absolute;
+	bottom: 0;
 }
 
 .amp {
@@ -158,6 +164,7 @@
 
 .check {
 	font-weight: bold;
+	vertical-align: top;
 }
 
 .requester {
@@ -183,7 +190,7 @@
 /*
  *  cards for story-type
  */
-.bug {
+.bug, .bug .footer {
 	background-color: #d5a086;
 }
 .bug .label {
@@ -196,7 +203,7 @@
 	-webkit-transform: rotate(-12deg);
 }
 
-.chore {
+.chore, .chore .footer {
 	background-color: #d0f0f0;
 }
 .chore .label {
@@ -209,7 +216,7 @@
 	-webkit-transform: rotate(-30deg);
 }
 
-.epic {
+.epic, .epic .footer  {
 	background-color: #f0b040;
 }
 .epic .label {
@@ -221,7 +228,7 @@
 	font-size: 61mm;
 }
 
-.release {
+.release, .release .footer {
 	background-color: #8580ff;
 }
 .release .label {
@@ -234,7 +241,7 @@
 	-webkit-transform: rotate(30deg);
 }
 
-.feature {
+.feature, .feature .footer {
 	background-color: #c5d0b6;
 }
 .feature .label {
@@ -247,7 +254,7 @@
 	-webkit-transform: rotate(30deg);
 }
 
-.spike {
+.spike, .spike .footer {
 	background-color: #faf47e;
 }
 .spike .label {
